add line of dogs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,60 @@
         <h1>Happy Valley Shelter</h1>
     </header>
 
+    <p>
+        <h2>Adopt a Dog</h2>
+    </p>
+
+    <p>
+        If you are interested in adopting one of our animals, please fill out our <a href="#">online adoption form.</a>
+    </p>
+
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/beans.jpg">
+        <p>
+            <strong>Beans</strong>
+        </p>
+        <ol>
+            <li>Adult</li>
+            <li>Male</li>
+            <li>Medium</li>
+            <li>Easygoing</li>
+            <li>Good with cats</li>
+        </ol>
+    </div>
+
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/boston-terrier.jpg">
+        <p>
+            <strong>Zelda</strong>
+        </p>
+        <ol>
+            <li>Senior</li>
+            <li>Female</li>
+            <li>Small</li>
+            <li>Easygoing</li>
+            <li>Good with kids</li>
+            <li>Good with other dogs</li>
+        </ol>
+    </div>
+
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/boxer.jpg">
+        <p>
+            <strong>Baby</strong>
+        </p>
+        <ol>
+            <li>Young</li>
+            <li>Female</li>
+            <li>Large</li>
+            <li>Energetic</li>
+            <li>Good with kids</li>
+            <li>Good with other dogs</li>
+        </ol>
+    </div>
+
+
+
 </body>
 
 </html>
