add a second line

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         If you are interested in adopting one of our animals, please fill out our <a href="#">online adoption form.</a>
     </p>
 
+    <section class="line1">
     <div class="dog">
         <img class="dog-pics" src="starter_files/images/beans.jpg">
         <p>
@@ -63,8 +64,55 @@
             <li>Good with other dogs</li>
         </ol>
     </div>
+</section>
 
+<section>
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/golden-lab.jpg">
+        <p>
+            <strong>Tom-Tom</strong>
+        </p>
+        <ol>
+            <li>Young</li>
+            <li>Male</li>
+            <li>Large</li>
+            <li>Energetic</li>
+            <li>Good with kids</li>
+            <li>Good with other dogs</li>
+            <li>Good with cats</li>
+        </ol>
+    </div>
 
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/little-dog.jpg">
+        <p>
+            <strong>Marco</strong>
+        </p>
+        <ol>
+            <li>Adult</li>
+            <li>Male</li>
+            <li>Small</li>
+            <li>Energetic</li>
+        </ol>
+    </div>
+
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/old-shaggy.jpg">
+        <p>
+            <strong>Shackleton</strong>
+        </p>
+        <ol>
+            <li>Adult</li>
+            <li>Male</li>
+            <li>Medium</li>
+            <li>Easygoing</li>
+            <li>Energetic</li>
+            <li>Good with kids</li>
+            <li>Good with other dogs</li>
+            <li>Good with cats</li>
+        </ol>
+    </div>
+</section>
 
 </body>
 
