add a third line

--- a/index.html
+++ b/index.html
@@ -114,6 +114,56 @@
     </div>
 </section>
 
+<section>
+    <div class="dog"> 
+        <img class="dog-pics" src="starter_files/images/shih-tzu.jpg">
+        <p>
+            <strong>Midge</strong>
+        </p>
+        <ol>
+            <li>Adult</li>
+            <li>Female</li>
+            <li>Small</li>
+            <li>Easygoing</li>
+            <li>Good with kids</li>
+        </ol>
+    </div>
+
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/young-bulldog.jpg">
+        <p>
+            <strong>Ladybird</strong>
+        </p>
+        <ol>
+            <li>Young</li>
+            <li>Female</li>
+            <li>Large</li>
+            <li>Easygoing</li>
+            <li>Energetic</li>
+            <li>Good with kids</li>
+            <li>Good with other dogs</li>
+            <li>Good with cats</li>
+        </ol>
+    </div>
+
+    <div class="dog">
+        <img class="dog-pics" src="starter_files/images/young-peppy.jpg">
+        <p>
+            <strong>Mina</strong>
+        </p>
+        <ol>
+            <li>Puppy</li>
+            <li>Female</li>
+            <li>Medium</li>
+            <li>Energetic</li>
+            <li>Good with kids</li>
+            <li>Good with other dogs</li>
+            <li>Good with cats</li>
+        </ol>
+    </div>
+</section>
+
+
 </body>
 
 </html>
