--- a/index.html
+++ b/index.html
@@ -163,6 +163,26 @@
     </div>
 </section>
 
+<section>
+    <div class="foot">
+        <p>
+        <h3>Donate</h3>
+        </p>
+    </div>
+
+    <div class="foot2">
+        <p>
+            <h3>Volunteer</h3>
+        </p>
+    </div>
+
+    <div class="foot3">
+        <p>
+            <h3>Our location</h3>
+        </p>
+    </div>
+</section>
+
 
 </body>
 
