--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h2>Adopt a Dog</h2>
     </p>
 
-    <p>
+    <p class="top-text">
         If you are interested in adopting one of our animals, please fill out our <a href="#">online adoption form.</a>
     </p>
 
-    <section class="line1">
+    <section class="line">
     <div class="dog">
         <img class="dog-pics" src="starter_files/images/beans.jpg">
         <p>
@@ -66,7 +66,7 @@
     </div>
 </section>
 
-<section>
+<section class="line">
     <div class="dog">
         <img class="dog-pics" src="starter_files/images/golden-lab.jpg">
         <p>
@@ -114,7 +114,7 @@
     </div>
 </section>
 
-<section>
+<section class="line">
     <div class="dog"> 
         <img class="dog-pics" src="starter_files/images/shih-tzu.jpg">
         <p>
@@ -163,7 +163,7 @@
     </div>
 </section>
 
-<section>
+<section class="line">
     <div class="foot">
         <p>
         <h3>Donate</h3>
