--- a/index.html
+++ b/index.html
@@ -21,167 +21,167 @@
     </p>
 
     <section class="line">
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/beans.jpg">
-        <p>
-            <strong>Beans</strong>
-        </p>
-        <ol>
-            <li>Adult</li>
-            <li>Male</li>
-            <li>Medium</li>
-            <li>Easygoing</li>
-            <li>Good with cats</li>
-        </ol>
-    </div>
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/beans.jpg">
+            <p>
+                <strong>Beans</strong>
+            </p>
+            <ol>
+                <li>Adult</li>
+                <li>Male</li>
+                <li>Medium</li>
+                <li>Easygoing</li>
+                <li>Good with cats</li>
+            </ol>
+        </div>
 
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/boston-terrier.jpg">
-        <p>
-            <strong>Zelda</strong>
-        </p>
-        <ol>
-            <li>Senior</li>
-            <li>Female</li>
-            <li>Small</li>
-            <li>Easygoing</li>
-            <li>Good with kids</li>
-            <li>Good with other dogs</li>
-        </ol>
-    </div>
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/boston-terrier.jpg">
+            <p>
+                <strong>Zelda</strong>
+            </p>
+            <ol>
+                <li>Senior</li>
+                <li>Female</li>
+                <li>Small</li>
+                <li>Easygoing</li>
+                <li>Good with kids</li>
+                <li>Good with other dogs</li>
+            </ol>
+        </div>
 
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/boxer.jpg">
-        <p>
-            <strong>Baby</strong>
-        </p>
-        <ol>
-            <li>Young</li>
-            <li>Female</li>
-            <li>Large</li>
-            <li>Energetic</li>
-            <li>Good with kids</li>
-            <li>Good with other dogs</li>
-        </ol>
-    </div>
-</section>
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/boxer.jpg">
+            <p>
+                <strong>Baby</strong>
+            </p>
+            <ol>
+                <li>Young</li>
+                <li>Female</li>
+                <li>Large</li>
+                <li>Energetic</li>
+                <li>Good with kids</li>
+                <li>Good with other dogs</li>
+            </ol>
+        </div>
+    </section>
 
-<section class="line">
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/golden-lab.jpg">
-        <p>
-            <strong>Tom-Tom</strong>
-        </p>
-        <ol>
-            <li>Young</li>
-            <li>Male</li>
-            <li>Large</li>
-            <li>Energetic</li>
-            <li>Good with kids</li>
-            <li>Good with other dogs</li>
-            <li>Good with cats</li>
-        </ol>
-    </div>
+    <section class="line">
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/golden-lab.jpg">
+            <p>
+                <strong>Tom-Tom</strong>
+            </p>
+            <ol>
+                <li>Young</li>
+                <li>Male</li>
+                <li>Large</li>
+                <li>Energetic</li>
+                <li>Good with kids</li>
+                <li>Good with other dogs</li>
+                <li>Good with cats</li>
+            </ol>
+        </div>
 
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/little-dog.jpg">
-        <p>
-            <strong>Marco</strong>
-        </p>
-        <ol>
-            <li>Adult</li>
-            <li>Male</li>
-            <li>Small</li>
-            <li>Energetic</li>
-        </ol>
-    </div>
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/little-dog.jpg">
+            <p>
+                <strong>Marco</strong>
+            </p>
+            <ol>
+                <li>Adult</li>
+                <li>Male</li>
+                <li>Small</li>
+                <li>Energetic</li>
+            </ol>
+        </div>
 
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/old-shaggy.jpg">
-        <p>
-            <strong>Shackleton</strong>
-        </p>
-        <ol>
-            <li>Adult</li>
-            <li>Male</li>
-            <li>Medium</li>
-            <li>Easygoing</li>
-            <li>Energetic</li>
-            <li>Good with kids</li>
-            <li>Good with other dogs</li>
-            <li>Good with cats</li>
-        </ol>
-    </div>
-</section>
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/old-shaggy.jpg">
+            <p>
+                <strong>Shackleton</strong>
+            </p>
+            <ol>
+                <li>Adult</li>
+                <li>Male</li>
+                <li>Medium</li>
+                <li>Easygoing</li>
+                <li>Energetic</li>
+                <li>Good with kids</li>
+                <li>Good with other dogs</li>
+                <li>Good with cats</li>
+            </ol>
+        </div>
+    </section>
 
-<section class="line">
-    <div class="dog"> 
-        <img class="dog-pics" src="starter_files/images/shih-tzu.jpg">
-        <p>
-            <strong>Midge</strong>
-        </p>
-        <ol>
-            <li>Adult</li>
-            <li>Female</li>
-            <li>Small</li>
-            <li>Easygoing</li>
-            <li>Good with kids</li>
-        </ol>
-    </div>
+    <section class="line">
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/shih-tzu.jpg">
+            <p>
+                <strong>Midge</strong>
+            </p>
+            <ol>
+                <li>Adult</li>
+                <li>Female</li>
+                <li>Small</li>
+                <li>Easygoing</li>
+                <li>Good with kids</li>
+            </ol>
+        </div>
 
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/young-bulldog.jpg">
-        <p>
-            <strong>Ladybird</strong>
-        </p>
-        <ol>
-            <li>Young</li>
-            <li>Female</li>
-            <li>Large</li>
-            <li>Easygoing</li>
-            <li>Energetic</li>
-            <li>Good with kids</li>
-            <li>Good with other dogs</li>
-            <li>Good with cats</li>
-        </ol>
-    </div>
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/young-bulldog.jpg">
+            <p>
+                <strong>Ladybird</strong>
+            </p>
+            <ol>
+                <li>Young</li>
+                <li>Female</li>
+                <li>Large</li>
+                <li>Easygoing</li>
+                <li>Energetic</li>
+                <li>Good with kids</li>
+                <li>Good with other dogs</li>
+                <li>Good with cats</li>
+            </ol>
+        </div>
 
-    <div class="dog">
-        <img class="dog-pics" src="starter_files/images/young-peppy.jpg">
-        <p>
-            <strong>Mina</strong>
-        </p>
-        <ol>
-            <li>Puppy</li>
-            <li>Female</li>
-            <li>Medium</li>
-            <li>Energetic</li>
-            <li>Good with kids</li>
-            <li>Good with other dogs</li>
-            <li>Good with cats</li>
-        </ol>
-    </div>
-</section>
+        <div class="dog">
+            <img class="dog-pics" src="starter_files/images/young-peppy.jpg">
+            <p>
+                <strong>Mina</strong>
+            </p>
+            <ol>
+                <li>Puppy</li>
+                <li>Female</li>
+                <li>Medium</li>
+                <li>Energetic</li>
+                <li>Good with kids</li>
+                <li>Good with other dogs</li>
+                <li>Good with cats</li>
+            </ol>
+        </div>
+    </section>
 
-<section class="line">
-    <div class="foot">
-        <p>
-        <h3>Donate</h3>
-        </p>
-    </div>
+    <footer>
+        <div class="foot1 footer">
+            <p class="center">
+                Donate
+            </p>
+        </div>
 
-    <div class="foot2">
-        <p>
-            <h3>Volunteer</h3>
-        </p>
-    </div>
+        <div class="foot2 footer">
+            <p class="center">
+                Volunteer
+            </p>
+        </div>
 
-    <div class="foot3">
-        <p>
-            <h3>Our location</h3>
-        </p>
-    </div>
-</section>
+        <div class="foot3 footer">
+            <p class="center">
+                Our location
+            </p>
+        </div>
+    </footer>
 
 
 </body>
